# audio-sonic-mcp

./: $null  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  _diag_keys.py  analyze_file.py  check_env.py  gold_master.json  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  server.py  smoke_test.py  updatelog.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-21-cli-summary-vibe-tags.md
docs/superpowers/specs/: 2026-05-20-local-file-input-design.md  2026-05-21-cli-summary-vibe-tags-design.md
jobs/sig_ballad/: metadata.json  raw_audio.webm
jobs/sig_bieber_eta/: metadata.json  raw_audio.webm
jobs/sig_exo_tempo/: metadata.json  raw_audio.webm
jobs/sig_hiphop/: metadata.json
jobs/sig_humble/: metadata.json
jobs/sig_jcole_mc/: metadata.json  raw_audio.webm
jobs/sig_lauv_julia/: metadata.json  raw_audio.webm
jobs/sig_somebody/: metadata.json  raw_audio.webm
jobs/sig_test_dna/: metadata.json
jobs/sig_test_hello/: metadata.json
jobs/sig_test_levitating/: metadata.json  raw_audio.webm
jobs/sig_yukon/: metadata.json  raw_audio.webm
pipeline/: analyzer.py  assembler.py  converter.py  demucs_runner.py  downloader.py  ingestion.py  separator.py  splitter.py  vectorizer.py  window.py
tests/: conftest.py  test_accuracy.py  test_analyzer.py  test_assembler.py  test_cli.py  test_converter.py  test_downloader.py  test_ingestion.py  test_server.py  test_splitter.py  test_vectorizer.py
tests/data/: example_eval.md  gold_master_sig_julia_lauv.json
tools/: check_env.py  diagnose_all.py  diagnose_new.py  generate_payload.py  profile_analyzer.py
